--- a/static/slides/03-slr-intro.Rmd
+++ b/static/slides/03-slr-intro.Rmd
@@ -21,6 +21,10 @@ editor_options:
 ```{r child = "setup.Rmd"}
 ```
 
+class: middle, center
+
+## [Click for PDF of slides](03-slr-intro.pdf)
+
 ---
 
 ## Topics 
