--- a/static/appex/ae-03-porsche.Rmd
+++ b/static/appex/ae-03-porsche.Rmd
@@ -65,7 +65,7 @@ porsche <- read_csv("data/PorschePrice.csv")
 ```
 
 
-In this AE, we will analyze the relationship between mileage and price for `r nrow(porsche)` Porsches. The data set includes the following variables: 
+In this AE, we will analyze the relationship between mileage and price for `r nrow(porsche)` Porsches for sale. More specifically, we want to use the mileage to understand variation in the price. The data set includes the following variables: 
 
 - `Price`: Asking price for the car (in $1,000’s)
 - `Age`: Age of the car (in years)
@@ -77,7 +77,11 @@ Let's start by getting a quick view of the data.
 glimpse(porsche)
 ```
 
-Next, let's look at the distributions of the response and predictor variables: 
+### Exploratory data analysis 
+
+1. Which variable is the response? Which is the predictor? 
+
+Let's look at the distribution of each variable. 
 
 ```{r}
 p1 <- ggplot(data = porsche, aes(x = Mileage)) + 
@@ -110,65 +114,71 @@ porsche %>%
             median_price = median(Price), 
             IQR_price = IQR(Price))
 ```
+1. Describe the distribution of `Mileage`. Include the shape, center, spread, and any outliers. 
+2. Describe the distribution of `Price`. Include the shape, center, spread, and any outliers. 
 
-
-```{r summary-stats}
-# skim() is from the skimr package
-advertising %>% 
-  skim()
-```
-
-1. What type of advertising typically has the smallest spending?
-2. What type of advertising has the largest variation in spending? 
-3. Describe the shape of the distribution of `sales`. 
-
-We are most interested in understanding how advertising spending affect sales. One way to quantify the relationship between the variables is by calculating the correlation matrix. 
-
-```{r correlation}
-advertising %>% 
-  cor()
-```
-
-1. What is the correlation between `radio` and `sales`? Interpret this value. 
-2. What type of advertising has the strongest linear relationship with `sales`? 
-
-Below are visualizations of `sales` versus each explanatory variable. 
+Before fitting a linear model, let's look at the relationship between `Mileage` and `Porsche`.
 
 ```{r}
-ggplot(data = advertising, mapping = aes(x =tv,y = sales)) + 
-  geom_point(alpha=0.7) +
-  geom_smooth(method="lm",se=FALSE,color="blue") + 
-  labs(title = "Sales vs. TV Advertising", 
-       x= "TV Advertising (in $thousands)", 
-       y="Sales (in $millions") #fill in the Y axis label
+ggplot(data = porsche, aes(x = Mileage, y = Price)) +
+  geom_point() + 
+  labs(x = "Mileage (in 1,000s)", 
+       y = "Price (in $1,000s)", 
+       title = "Price vs. Mileage for Porsches")
 ```
 
-```{r}
-ggplot(data = advertising, mapping = aes(x = radio, y = sales)) + 
-  geom_point(alpha = 0.7) + 
-  geom_smooth(method = "lm",se=FALSE,color="red") +
-  labs(title = "Sales vs. TV Advertising", 
-       x= "Radio Advertising (in $thousands)", 
-       y="Sales (in $millions)")
+1. What sign do you expect the slope to have? 
+
+2. Around what value do you expect the intercept to take? 
+
+### Fitting a simple linear regression model 
+
+We will use the `lm` function to fit the linear model. The syntax for `lm` function is `lm(Y ~ X, data = dataset`). 
+
+Then, we will use the `tidy` function from the **broom** package to print the results in a "tidy" format, i.e. each row contains the statistics for a model coefficient. 
+
+Fill in the `lm` function to fit a regression model and assign it to `price_model`. Remove `eval = FALSE`, so the code chunk runs when you knit. 
+
+Knit the file to see the model output. 
+
+
+```{r model, eval = FALSE}
+price_model <- lm(___________)
+tidy(price_model)
 ```
 
-```{r}
-## Fill in the code to create the a scatterplot sales vs. TV ads.
-```
-
-Since `tv` appears to have the strongest linear relationship with `sales`, let's calculate a simple linear regression model using these two variables. 
-
-```{r model}
-ad_model <- lm(sales ~ tv, data=advertising)
-ad_model
-```
+Commit the updated files with a short informative commit message, and push the updates to GitHub. 
 
 1. Write the model equation. 
-2. Interpret the intercept in the context of the problem. 
-3. Interpret the slope in the context of the problem.
 
-*We'll talk about slope and intercept next week!*
+2. Interpret the slope in the context of the data.
 
-## Acknowledgements
+3. The intercept is the mean price for what group of Porsches?
 
-The advertising data is from [*Introduction of Statistical Learning*](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf)
+### Residuals 
+
+
+We can use the `augment` function to get the predicted values (`.fitted`), residuals (`.resid`) and other statistics we'll use later to assess the model fit. 
+
+Fill in the model name in the augment function. Then, remove `eval = FALSE`, so the code chunk runs when you knit. 
+
+```{r eval = FALSE}
+price_aug <- augment(price_model)
+```
+
+Consider the first observation. 
+
+```{r eval = FALSE}
+price_aug %>%
+  slice(1)
+```
+
+1. What is the residual? How was it calculated? 
+
+2. Did the model over or under predict the price of this Porsche? 
+
+Knit your Rmd file to view the updated output. Commit your changes with an informative commit message, and push the updated files to GitHub. 
+
+<hr> 
+
+The data used in this exercise is from [*Stat2: Building Models for a World of Data*](http://www.stat2.org/datapage.html).
