--- a/static/hw/hw-01.Rmd
+++ b/static/hw/hw-01.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(echo = TRUE,
                       message=FALSE)
 ```
 
-<!--
 # Getting started
 
 Each of your assignments will begin with the steps outlined in this section. For more detailed instructions about getting started, see the [Lab 01 instructions](https://sta210-fa20.netlify.app/labs/lab-01-practice-r.html)
@@ -62,13 +61,11 @@ library(broom)
 library(knitr)
 ```
 
-If you need to install any of the packages, type `install.packages("package_name")` in the console, where `package_name` is the package you need to install. 
-
 # Questions
 
 ## Part 1: Conceptual questions
 
-Our data set contains the nutrition information for food items sold at Starbucks. Starbucks will often display the number of calories for the display items but will not show any other nutrition information. Therefore, we want to use the number of calories to understand variability in the amount of carbohydrates (in grams) in Starbucks food items. 
+Our data set contains the nutrition information for food items sold at Starbucks. Starbucks will often display the number of calories in store displays but will not show any other nutrition information. Therefore, we want to use the number of calories to understand variability in the amount of carbohydrates (in grams) in Starbucks food items. 
 
 Use the code below to load the dataset. It is originally from the openintro R package.
 
@@ -77,7 +74,7 @@ starbucks <- read_csv("data/starbucks.csv")
 ```
 
 
-1. We will use the variables `calories` and `carb` for this analysis. Which variable is the response variable? 
+1. We will use the variables `calories` and `carb` for this analysis. Which variable is the response?
 
 1. Create a scatterplot displaying the relationship between the two variables. Include appropriate a title and appropriate axis labels. 
 
@@ -102,7 +99,7 @@ starbucks <- read_csv("data/starbucks.csv")
 
 Read the 2016 FiveThirtyEight article ["New Yorkers Will Pay $56 A Month To Trim A Minute Off Their Commute"](https://fivethirtyeight.com/features/new-yorkers-will-pay-56-a-month-to-trim-a-minute-off-their-commute/) by Carl Bialik. 
 
-Rank each of the following principles from  [Elements and Principles for Characterizing Variation between Data Analyses](https://arxiv.org/pdf/1903.07639.pdf) for the FiveThirtyEight article. Use a scale of 1 - 5. Include a 1 - 2 sentence summary for each principle.  
+Rank each of the following principles from  [Elements and Principles for Characterizing Variation between Data Analyses](https://arxiv.org/pdf/1903.07639.pdf) for the FiveThirtyEight article. Use a scale of 1 - 5, where 1 means the principle has not been applied and 5 means the principle has been fully applied. Include a 1 - 2 sentence summary for each principle.  
 
 - data matching:
 - exhaustive:
@@ -144,5 +141,3 @@ Rank each of the following principles from  [Elements and Principles for Charact
 <hr>
 
 *Exercise in part 2 is adapted frm question by  [Dr. Lucy McGowan](https://github.com/sta-212-f19/website).*
-
--->
