--- a/public/slides/05-slr-prediction.Rmd
+++ b/public/slides/05-slr-prediction.Rmd
@@ -23,7 +23,7 @@ editor_options:
 
 class: middle, center
 
-## [Click here for PDF of slides](05-prediction.pdf)
+## [Click here for PDF of slides](05-slr-prediction.pdf)
 
 ---
 
