--- a/public/slides/06-slr-partition-var.Rmd
+++ b/public/slides/06-slr-partition-var.Rmd
@@ -23,7 +23,7 @@ editor_options:
 
 class: middle, center
 
-## [Click here for PDF of slides](06-partition-var.pdf)
+## [Click here for PDF of slides](06-slr-partition-var.pdf)
 
 ---
 
